Closed Bug 1659261 Opened 5 years ago Closed 5 years ago

Perma bustage /builds/worker/checkouts/gecko/js/xpconnect/src/XPCJSContext.cpp:1017:31: error: use of undeclared identifier 'privateMethodsEnabled'; did you mean 'privateFieldsEnabled'? when Gecko 81 merges to Beta on 2020-08-24

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

VERIFIED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- unaffected
firefox81 --- verified

People

(Reporter: ccoroiu, Assigned: avandolder)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central as beta simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=17edd74c1e82e796d13e08d4837e9574903a0dae&selectedTaskRun=DqL2XzuuRgGZF_qBsF8Vwg.0

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=313099856&repo=try&lineNumber=32423

[task 2020-08-15T10:45:10.463Z] 10:45:10 INFO - layout/base/nsRefreshDriver.o
[task 2020-08-15T10:45:10.464Z] 10:45:10 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/base'
[task 2020-08-15T10:45:12.772Z] 10:45:12 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/js/xpconnect/src'
[task 2020-08-15T10:45:12.779Z] 10:45:12 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o Unified_cpp_js_xpconnect_src1.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/workspace/obj-build/js/xpconnect/src -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/workspace/obj-build/xpcom/components -I/builds/worker/checkouts/gecko/js/xpconnect/loader -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/xpcom/components -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Werror -Wno-shadow -Werror=format -fexperimental-new-pass-manager -MD -MP -MF .deps/Unified_cpp_js_xpconnect_src1.o.pp Unified_cpp_js_xpconnect_src1.cpp
[task 2020-08-15T10:45:12.779Z] 10:45:12 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/xpconnect/src'
[task 2020-08-15T10:45:12.784Z] 10:45:12 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/layout/base'
[task 2020-08-15T10:45:12.784Z] 10:45:12 INFO - layout/base/Unified_cpp_layout_base0.o
[task 2020-08-15T10:45:12.784Z] 10:45:12 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/base'
[task 2020-08-15T10:45:13.842Z] 10:45:13 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/js/xpconnect/src'
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o Unified_cpp_js_xpconnect_src0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/workspace/obj-build/js/xpconnect/src -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/workspace/obj-build/xpcom/components -I/builds/worker/checkouts/gecko/js/xpconnect/loader -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/xpcom/components -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Werror -Wno-shadow -Werror=format -fexperimental-new-pass-manager -MD -MP -MF .deps/Unified_cpp_js_xpconnect_src0.o.pp Unified_cpp_js_xpconnect_src0.cpp
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - In file included from Unified_cpp_js_xpconnect_src0.cpp:74:
[task 2020-08-15T10:45:13.844Z] 10:45:13 ERROR - /builds/worker/checkouts/gecko/js/xpconnect/src/XPCJSContext.cpp:1017:31: error: use of undeclared identifier 'privateMethodsEnabled'; did you mean 'privateFieldsEnabled'?
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - .setPrivateClassMethods(privateMethodsEnabled);
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - ^~~~~~~~~~~~~~~~~~~~~
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - privateFieldsEnabled
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - /builds/worker/checkouts/gecko/js/xpconnect/src/XPCJSContext.cpp:964:8: note: 'privateFieldsEnabled' declared here
[task 2020-08-15T10:45:13.844Z] 10:45:13 INFO - bool privateFieldsEnabled = false;
[task 2020-08-15T10:45:13.845Z] 10:45:13 INFO - ^
[task 2020-08-15T10:45:13.845Z] 10:45:13 INFO - 1 error generated.
[task 2020-08-15T10:45:13.845Z] 10:45:13 INFO - /builds/worker/checkouts/gecko/config/rules.mk:723: recipe for target 'Unified_cpp_js_xpconnect_src0.o' failed
[task 2020-08-15T10:45:13.845Z] 10:45:13 ERROR - make[4]: *** [Unified_cpp_js_xpconnect_src0.o] Error 1
[task 2020-08-15T10:45:13.845Z] 10:45:13 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/xpconnect/src'
[task 2020-08-15T10:45:13.845Z] 10:45:13 INFO - /builds/worker/checkouts/gecko/config/recurse.mk:72: recipe for target 'js/xpconnect/src/target-objects' failed
[task 2020-08-15T10:45:13.845Z] 10:45:13 ERROR - make[3]: *** [js/xpconnect/src/target-objects] Error 2
[task 2020-08-15T10:45:13.845Z] 10:45:13 INFO - make[3]: *** Waiting for unfinished jobs....

Seems to be caused by https://bugzilla.mozilla.org/show_bug.cgi?id=1435826
Adam, can you please take a look?

Flags: needinfo?(avandolder)

Yep, that caused it; specifically https://hg.mozilla.org/mozilla-central/rev/d1a5046cd636#l8.12, since it only declared privateMethodsEnabled on nightly builds.

Assignee: nobody → avandolder
Flags: needinfo?(avandolder)
Severity: -- → S4
Priority: -- → P1
Pushed by avandolder@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c1bb5b123bde Declare privateMethodsEnabled outside of just nightly. r=jorendorff
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: