Bug 1659261 - Declare privateMethodsEnabled outside of just nightly. r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D87282