js/xpconnect/src/XPCJSContext.cpp
@@ -962,12 +962,13 @@ static void ReloadPrefsCallback(const char* pref, void* aXpccx) {
 
   // Require private fields disabled outside of nightly.
   bool privateFieldsEnabled = false;
+  bool privateMethodsEnabled = false;
 #ifdef NIGHTLY_BUILD
   sIteratorHelpersEnabled =
       Preferences::GetBool(JS_OPTIONS_DOT_STR "experimental.iterator_helpers");
   privateFieldsEnabled =
       Preferences::GetBool(JS_OPTIONS_DOT_STR "experimental.private_fields");
-  bool privateMethodsEnabled =
+  privateMethodsEnabled =
       Preferences::GetBool(JS_OPTIONS_DOT_STR "experimental.private_methods");
 #endif
 
